Incorporated comments from review, Added GenericToggleSwitch Profile
Signed-off-by: Christoph Weitkamp <github@christophweitkamp.de>